--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://github.com/mariyka-kononchuk/hometask-1",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /hometask-1npm/"
+    "build": "parcel build src/*.html --public-url /hometask-1/"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
   "author": "Maria Kononchuk <mariyka.kononchuk@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mariyka-kononchuk/hometask-1/issues"
+    "url": "https://github.com/mariyka-kononchuk/hometask-1"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
