--- a/package.json
+++ b/package.json
@@ -1,33 +1,46 @@
 {
-  "name": "hometask-1",
+  "name": "todo-js",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "version": "1.1.0",
   "description": "",
-  "main": "index.js",
-  "homepage": "https://github.com/mariyka-kononchuk/hometask-1",
+  "homepage": "https://github.com/mariyka-kononchuk/todo-js",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /hometask-1/"
+    "build": "parcel build src/*.html --public-url /todo-js/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mariyka-kononchuk/hometask-1"
+    "url": "git+https://github.com/mariyka-kononchuk/todo-js"
   },
   "keywords": [],
   "author": "Maria Kononchuk <mariyka.kononchuk@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mariyka-kononchuk/hometask-1"
+    "url": "https://github.com/mariyka-kononchuk/todo-js"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.5",
+    "parcel": "^2.8.2",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1",
+    "parcel-transformer-hbs": "^1.0.4",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
   },
   "dependencies": {
+    "@parcel/config-default": "^2.8.2",
+    "@parcel/transformer-raw": "^2.8.2",
+    "@parcel/transformer-sass": "^2.8.2",
     "dateformat": "^5.0.3",
+    "deasync": "^0.1.28",
     "notiflix": "^3.2.5",
     "uuid": "^8.3.2"
+  },
+  "targets": {
+    "default": {
+      "includeNodeModules": true
+    }
+  },
+  "engines": {
+    "node": "10"
   }
 }
